# ship_detection

./: .gitignore  README.md  pyproject.toml
.docker/: Dockerfile  requirements.txt  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue-template.md
configs/: default.py
configs/faster_rcnn/: faster_rcnn_r50_fpn_1x_coco.py
configs/preprocessing/: default.py  default.yaml
configs/training/: default.yaml
configs/yolof/: yolof_r50_c5_8x8_1x_coco.py
model_configs/_base_/models/: faster_rcnn_r50_fpn.py
notebook/: coco_dataloader.ipynb  create_dataset.ipynb  data_analysis.ipynb  dataset_analysis.ipynb  evaluate_coco.ipynb  training_util.ipynb  visualize_dataset.ipynb
scripts/: convert_polygon_to_point.sh  create_inference_data.sh  create_training_data.sh  infer.sh  initial_upload_to_mapbox.sh  preprocessing.sh  test.sh  test_mmdet.sh  train.sh  update_mapbox.sh
src/: train.py
src/dataloader/: augmentation.py  dataloader.py  dataset.py
src/model/: faster_rcnn.py  mask_rcnn.py
src/tools/: convert_geojson_to_geojsonld.py  convert_polygon_to_point.py  create_inference_data.py  create_training_data.py  infer.py  infer_mmdet.py  preprocessing.py  test.py  train.py  train_mmdet.py  xml2json.py
src/utils/: coco_eval.py  coco_utils.py  engine.py  evaluation_utils.py  general_utils.py  logger.py  preprocessing_utils.py  raster_utils.py  train_utils.py  utils.py  vector_utils.py  visualization.py
tests/: conftest.py  test_preprocessing.py  test_utils.py
tests/dummy_data/: test.xml
