[tool.poetry]
name = "ship_detection"
version = "0.1.0"
description = ""
authors = ["whata92 <waku.hatakeyama@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.1"
opencv-python = "^4.6.0"
flake8 = "^5.0.4"
black = "^22.6.0"
pytest = "^7.1.2"
ipykernel = "^6.15.1"
matplotlib = "^3.5.3"
scikit-image = "^0.19.3"
albumentations = "^1.2.1"
pycocotools = "^2.0.4"
yacs = "^0.1.8"
xmltodict = "^0.13.0"
geopandas = "^0.11.1"
dicttoxml = "^1.7.4"
tensorboard = "^2.10.0"
GDAL = "3.0.4"
rasterio = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
